fixing prblms in the header section on mobile vue

--- a/styles/main.css
+++ b/styles/main.css
@@ -75,7 +75,7 @@ a {
   width: 100%;
   top: 0;
   left: 0;
-  z-index: 20;
+  z-index: 100;
   display: flex;
   height: 3.5rem;
   align-items: center;
@@ -325,7 +325,7 @@ section .section-title {
   margin: 0;
   font-size: 2rem;
   font-weight: bold;
-  color: chocolate;
+  color: #4c4c4c;
 }
 #projects div .description span {
   font-weight: bold;
