--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -11,7 +11,6 @@
     align-items: center;
 
 
-
     @media (min-width: 81rem) {
       flex-direction: row;
     }
@@ -50,8 +49,9 @@
         margin: 0;
         font-size: 2rem;
         font-weight: bold;
-        color: chocolate;
+        color: lighten(#323232,10%);
       }
+
       span {
         font-weight: bold;
       }
